docs: enrich README with architecture, benchmarks, quickstart and project structure